recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:6: error: illegal start of simple expression
    gauche(angle) ; tree(steps-1,length*shrink,angle,)
                                                     ^Tree:9: error: ')' expected but '}' found.
  }
  ^